# Keeper-of-Keys

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
resources/: icon.icns  org.blackholefox.keeperofkeys.plist  sandbox.sb
src/: bindings.rs  config.rs  events.rs  main.rs  messaging.rs  sandbox.rs  version.rs
