[package]
name = "keeper_of_keys"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A watcher for all your keychains"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
security-framework = "2.6"
security-framework-sys = "2.6"
bitflags = "1"
bytemuck = { version = "1", features = ["derive"] }
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"

# TODO: use regular dependency when memory leak fixes are released.
mac-notification-sys = { git = "https://github.com/BlackHoleFox/mac-notification-sys.git", branch = "fix-leak-faucet" }
# mac-notification-sys = "0.5"
embed_plist = "1.2"
toml = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

const_format = "0.2"

log = "0.4"
flexi_logger = { version = "0.22", default-features = false, features = ["colors"] }

[package.metadata.bundle]
name = "Keeper of Keys"
identifier = "org.blackholefox.keeperofkeys"
icon = ["./resources/icon.png"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"